--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "cotizador-creditos",
-  "private": true,
   "version": "0.0.0",
   "type": "module",
   "homepage": "https://dhaner.github.io/react-credit-calculator/",
@@ -10,7 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
